syntax = "proto3";

package users;

option go_package = "userspb";

message UserRequest {
    string email = 1;
    string password = 2;
}

message UserResponse {
    string token = 1;
    string email = 2;
}

service Users {
    rpc Login(UserRequest) returns (UserResponse) {};
    rpc SignUp(UserRequest) returns (UserResponse) {};
}